# aiogram3-tg-bot-store

./: .gitignore  KICKSTART.md  marketing-doc.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: FEATURE-localization.md  FEATURE-location.md  FEATURE-menu-loading.md  FEATURE-multi-platform-core.md  FEATURE-platform-line.md  FEATURE-platform-whatsapp.md
telegrambot/: main.py
telegrambot/common/: bot_cmds_list.py  restricted_words.py  texts_for_db.py
telegrambot/data/: menu.json
telegrambot/database/: engine.py  menu_import.py  models.py  orm_query.py
telegrambot/handlers/: admin_private.py  menu_processing.py  user_group.py  user_private.py
telegrambot/keyboards/: inline.py
telegrambot/lexicon/: i18n.py  lexicon_ru.py  strings.py
telegrambot/middlewares/: db.py
telegrambot/tests/: test_i18n.py  test_menu_import.py  test_models.py
telegrambot/utils/: paginator.py
